# card-game

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  ICardFactory_8h.html  ICardFactory_8h.js  ICardFactory_8h__dep__incl.map  ICardFactory_8h__dep__incl.md5  ICardFactory_8h__incl.map  ICardFactory_8h__incl.md5  ICardFactory_8h_source.html  LICENSE  README.md  Random_8h.html  Random_8h.js  Random_8h__incl.map  Random_8h__incl.md5  Random_8h_source.html  annotated.html  annotated_dup.js  cardDefinition_8cpp.html  cardDefinition_8cpp__incl.map  cardDefinition_8cpp__incl.md5  cardDefinition_8h.html  cardDefinition_8h.js  cardDefinition_8h__dep__incl.map  cardDefinition_8h__dep__incl.md5  cardDefinition_8h__incl.map  cardDefinition_8h__incl.md5  cardDefinition_8h_source.html  cardFactory_8cpp.html  cardFactory_8cpp__incl.map  cardFactory_8cpp__incl.md5  cardFactory_8h.html  cardFactory_8h.js  cardFactory_8h__dep__incl.map  cardFactory_8h__dep__incl.md5  cardFactory_8h__incl.map  cardFactory_8h__incl.md5  cardFactory_8h_source.html  (+432 more)
.github/workflows/: doxygen-gh-pages.yml
app/: .clang-format  CMakeLists.txt
app/data/: text.json
app/src/: main.cpp
app/src/card-system/: card.h  deck.cpp  deck.h  deckCombat.cpp  deckEntry.h  deckPlayer.cpp  deckPlayer.h
app/src/card_system/: card.cpp  card.h  cardDefinition.cpp  cardDefinition.h  cardFactory.cpp  cardFactory.h  cardInstance.h  cardInterpreter.h  cardMaker.cpp  cardMaker.h  deckCombat.cpp  deckCombat.h  deckPlayer.cpp  deckPlayer.h  effect.h
app/src/card_system/effects/: effect.h  gainArmorEffect.cpp  gainArmorEffect.h  gainBlockEffect.cpp  gainBlockEffect.h
app/src/cards/: cardDefinition.cpp  cardDefinition.h  cardInstance.cpp  cardInstance.h
app/src/cards/effects/: gainArmorEffect.cpp  gainArmorEffect.h
app/src/deck/: deckCombat.cpp  deckCombat.h  deckPlayer.cpp  deckPlayer.h
app/src/entities/: player.cpp  player.h
app/src/entities/enemies/: enemy.cpp  enemy.h
app/src/factories/: cardFactory.cpp  cardFactory.h
app/src/game_system/: cardmatch.cpp  cardmatch.h  game.cpp  game.h  iotext.cpp  iotext.h  player.h  text.h
app/src/tests/: cardMatchTest.cpp  creatingCardsTest.cpp  deckTest.cpp  deck_test.cpp
app/src/ui/: iotext.cpp  text.cpp
sandbox/: cardMatchTest.cpp  handPrintTest.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_7.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_9.js  functions_0.js  functions_1.js  functions_2.js  (+26 more)
src/: main.cpp
src/cards/: cardDefinition.cpp  cardDefinition.h  cardInstance.cpp  cardInstance.h  effect.h
src/cards/effects/: effectParams.h  gainArmorEffect.cpp  gainArmorEffect.h
src/combat/: combatContext.cpp  combatContext.h  combatEvents.h  combatSystem.cpp  combatSystem.h  combatTarget.h
src/deck/: deckCombat.cpp  deckCombat.h  deckEntry.h  deckPlayer.h
src/effects/: effect.h  gainArmorEffect.h
src/entities/: entity.h  player.cpp  player.h
src/entities/enemies/: enemy.cpp  enemy.h  enemyMove.h  wolfPack.cpp  wolfPack.h
src/factories/: ICardFactory.h  cardFactory.cpp  cardFactory.h
src/game_system/: cardmatch.cpp  cardmatch.h  combatContext.h  combatSystem.cpp  combatSystem.h  game.cpp  game.h
src/ui/: cardRenderer.cpp  cardRenderer.h  handRenderer.cpp  handRenderer.h  iotext.cpp  iotext.h  text.h
src/util/: debug.h
